reference-llvm/tests/should-fail/fail7.mu
// bad args to intrinsic (string)

function @entry foo() {
    [write "hello, world", .console.tx];
}
